feat: se agregaron los archivos de relojes, sus estilos, las imagenes de cada reloj y se hicieron cambios en el catalogo y la galeria de la historia

--- a/catalogo.html
+++ b/catalogo.html
@@ -46,7 +46,7 @@
                 <h3>Paul Newman Rolex Daytona</h3>
                 <p>$20.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj1.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -56,7 +56,7 @@
                 <h3>Jacob&Co. The Billionaire</h3>
                 <p>$45.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj2.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
                 <h3>Patek Philippe Ref 1518 In Steel</h3>
                 <p>$15.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj3.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -76,7 +76,7 @@
                 <h3>Patek Philippe Gobbi Milan Heures Universelles</h3>
                 <p>$32.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj4.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -101,140 +101,140 @@
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj1.jpg" alt="">
+            <img src="./assets/imagenes/Reloj7.jpg" alt="">
             <div class="info">
-                <h3>Paul Newman Rolex Daytona</h3>
-                <p>$20.000</p>
+                <h3>LuxTime Étoile d’Or</h3>
+                <p>$14.500</p>
                 <p class="disp-agt">Agotado</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj2.jpg" alt="">
+            <img src="./assets/imagenes/Reloj8.jpg" alt="">
             <div class="info">
-                <h3>Jacob&Co. The Billionaire</h3>
-                <p>$45.000</p>
+                <h3>LuxTime ChronoLume Titan</h3>
+                <p>$9.200</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj3.jpg" alt="">
+            <img src="./assets/imagenes/Reloj9.jpg" alt="">
             <div class="info">
-                <h3>Patek Philippe Ref 1518 In Steel</h3>
-                <p>$15.000</p>
+                <h3>LuxTime Origin 1998</h3>
+                <p>$7.800</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj4.jpg" alt="">
+            <img src="./assets/imagenes/Reloj10.jpg" alt="">
             <div class="info">
-                <h3>Patek Philippe Gobbi Milan Heures Universelles</h3>
-                <p>$32.000</p>
+                <h3>LuxTime Valois Legacy</h3>
+                <p>$22.000</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj5.jpg" alt="">
+            <img src="./assets/imagenes/Reloj11.jpg" alt="">
             <div class="info">
-                <h3>Louis Moinet Meteoris Collection</h3>
-                <p>$50.000</p>
+                <h3>LuxTime Pulse Noir</h3>
+                <p>$6.200</p>
                 <p class="disp-agt">Agotado</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj6.jpg" alt="">
+            <img src="./assets/imagenes/Reloj12.jpg" alt="">
             <div class="info">
-                <h3>Patek Philippe 5004T</h3>
-                <p>$27.000</p>
+                <h3>LuxTime Astralis Celeste</h3>
+                <p>$26.000</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj1.jpg" alt="">
+            <img src="./assets/imagenes/Reloj13.jpg" alt="">
             <div class="info">
-                <h3>Paul Newman Rolex Daytona</h3>
-                <p>$20.000</p>
+                <h3>LuxTime Royale Cuir</h3>
+                <p>$18.500</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj2.jpg" alt="">
+            <img src="./assets/imagenes/Reloj14.jpg" alt="">
             <div class="info">
-                <h3>Jacob&Co. The Billionaire</h3>
-                <p>$45.000</p>
+                <h3>LuxTime Élément Feu</h3>
+                <p>$11.300</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj3.jpg" alt="">
+            <img src="./assets/imagenes/Reloj15.jpg" alt="">
             <div class="info">
-                <h3>Patek Philippe Ref 1518 In Steel</h3>
-                <p>$15.000</p>
+                <h3>LuxTime Saphir Lumière</h3>
+                <p>$13.000</p>
                 <p class="disp-agt">Agotado</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj4.jpg" alt="">
+            <img src="./assets/imagenes/Reloj16.jpg" alt="">
             <div class="info">
-                <h3>Patek Philippe Gobbi Milan Heures Universelles</h3>
-                <p>$32.000</p>
+                <h3>LuxTime Legacy Chronograph</h3>
+                <p>$10.800</p>
                 <p class="disp-agt">Agotado</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj5.jpg" alt="">
+            <img src="./assets/imagenes/Reloj17.jpg" alt="">
             <div class="info">
-                <h3>Louis Moinet Meteoris Collection</h3>
-                <p>$50.000</p>
+                <h3>LuxTime Riviera Marine</h3>
+                <p>$9.000</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj6.jpg" alt="">
+            <img src="./assets/imagenes/Reloj18.jpg" alt="">
             <div class="info">
-                <h3>Patek Philippe 5004T</h3>
-                <p>$27.000</p>
+                <h3>LuxTime Eclipse Shadow</h3>
+                <p>$15.700</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj1.jpg" alt="">
+            <img src="./assets/imagenes/Reloj19.jpg" alt="">
             <div class="info">
-                <h3>Paul Newman Rolex Daytona</h3>
-                <p>$20.000</p>
+                <h3>LuxTime Diamant Blanc</h3>
+                <p>$17.800</p>
                 <p class="disp-agt">Agotado</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj2.jpg" alt="">
+            <img src="./assets/imagenes/Reloj20.jpg" alt="">
             <div class="info">
-                <h3>Jacob&Co. The Billionaire</h3>
-                <p>$45.000</p>
+                <h3>LuxTime Compasso d’Oro</h3>
+                <p>$19.900</p>
                 <p class="disp-stc">En Stock</p>
                 <a href="catalogo.html" target="content">Ver detalles</a>
             </div>
