--- a/historia.html
+++ b/historia.html
@@ -74,27 +74,45 @@
     <h1 class="titulo galeria">Galeria de nuestra marca</h1>
     <section class="galery">
         <div class="card">
-            <img src="./assets/imagenes/Reloj1.jpg" alt="">
+            <img src="./assets/imagenes/fabrica.jpg" alt="fabrica">
+            <div class="description">
+                <h2>Nuestra primera fabrica</h2>
+            </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj2.jpg" alt="">
+            <img src="./assets/imagenes/expansion_global.jpg" alt="globalizacion">
+            <div class="description">
+                <h2>Presencia en todo el mundo</h2>
+            </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj3.jpg" alt="">
+            <img src="./assets/imagenes/museo.jpg" alt="museo">
+            <div class="description">
+                <h2>Nuestro museo</h2>
+            </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj4.jpg" alt="">
+            <img src="./assets/imagenes/Reloj17.jpg" alt="reloj femenino">
+            <div class="description">
+                <h2>Linea femenina</h2>
+            </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj5.jpg" alt="">
+            <img src="./assets/imagenes/sostenible.jpg" alt="sostenibilidad">
+            <div class="description">
+                <h2>Produccion sostenible</h2>
+            </div>
         </div>
 
         <div class="card">
-            <img src="./assets/imagenes/Reloj6.jpg" alt="">
+            <img src="./assets/imagenes/Reloj18.jpg" alt="smartwatch">
+            <div class="description">
+                <h2>Nuestro primer smartwatch</h2>
+            </div>
         </div>
     </section>
 </body>
