--- a/catalogo.html
+++ b/catalogo.html
@@ -86,7 +86,7 @@
                 <h3>Louis Moinet Meteoris Collection</h3>
                 <p>$50.000</p>
                 <p class="disp-agt">Agotado</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj5.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -96,7 +96,7 @@
                 <h3>Patek Philippe 5004T</h3>
                 <p>$27.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj6.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -106,7 +106,7 @@
                 <h3>LuxTime Étoile d’Or</h3>
                 <p>$14.500</p>
                 <p class="disp-agt">Agotado</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj7.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -116,7 +116,7 @@
                 <h3>LuxTime ChronoLume Titan</h3>
                 <p>$9.200</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj8.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -126,7 +126,7 @@
                 <h3>LuxTime Origin 1998</h3>
                 <p>$7.800</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj9.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -136,7 +136,7 @@
                 <h3>LuxTime Valois Legacy</h3>
                 <p>$22.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj10.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -146,7 +146,7 @@
                 <h3>LuxTime Pulse Noir</h3>
                 <p>$6.200</p>
                 <p class="disp-agt">Agotado</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj11.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -156,7 +156,7 @@
                 <h3>LuxTime Astralis Celeste</h3>
                 <p>$26.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj12.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -166,7 +166,7 @@
                 <h3>LuxTime Royale Cuir</h3>
                 <p>$18.500</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj13.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -176,7 +176,7 @@
                 <h3>LuxTime Élément Feu</h3>
                 <p>$11.300</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj14.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -186,7 +186,7 @@
                 <h3>LuxTime Saphir Lumière</h3>
                 <p>$13.000</p>
                 <p class="disp-agt">Agotado</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj15.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -196,7 +196,7 @@
                 <h3>LuxTime Legacy Chronograph</h3>
                 <p>$10.800</p>
                 <p class="disp-agt">Agotado</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj16.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -206,7 +206,7 @@
                 <h3>LuxTime Riviera Marine</h3>
                 <p>$9.000</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj17.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -216,7 +216,7 @@
                 <h3>LuxTime Eclipse Shadow</h3>
                 <p>$15.700</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj18.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -226,7 +226,7 @@
                 <h3>LuxTime Diamant Blanc</h3>
                 <p>$17.800</p>
                 <p class="disp-agt">Agotado</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj19.html" target="content">Ver detalles</a>
             </div>
         </div>
 
@@ -236,7 +236,7 @@
                 <h3>LuxTime Compasso d’Oro</h3>
                 <p>$19.900</p>
                 <p class="disp-stc">En Stock</p>
-                <a href="catalogo.html" target="content">Ver detalles</a>
+                <a href="./archivos_relojes/reloj20.html" target="content">Ver detalles</a>
             </div>
         </div>
 
