feat: se agrego la seccion de contacto, y los productos relacionados en cada reloj

--- a/archivos_relojes/reloj20.html
+++ b/archivos_relojes/reloj20.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">LuxTime Compasso d’Oro</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj20.jpg" alt="">
+        <img src="../assets/imagenes/Reloj20.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$19.900</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj6.html" target="content">
+            <img src="../assets/imagenes/Reloj6.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj18.html" target="content">
+            <img src="../assets/imagenes/Reloj18.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj10.html" target="content">
+            <img src="../assets/imagenes/Reloj10.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj16.html" target="content">
+            <img src="../assets/imagenes/Reloj16.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
