--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </nav>
 
                 <div class="contacto">
-                    <a href="#">Contactanos</a>
+                    <a href="contacto.html" target="content">Contactanos</a>
                 </div>
    
             </div>
