--- a/archivos_relojes/reloj16.html
+++ b/archivos_relojes/reloj16.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">LuxTime Legacy Chronograph</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj16.jpg" alt="">
+        <img src="../assets/imagenes/Reloj16.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$10.800</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj17.html" target="content">
+            <img src="../assets/imagenes/Reloj17.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj9.html" target="content">
+            <img src="../assets/imagenes/Reloj9.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj6.html" target="content">
+            <img src="../assets/imagenes/Reloj6.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj2.html" target="content">
+            <img src="../assets/imagenes/Reloj2.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
