--- a/archivos_relojes/reloj17.html
+++ b/archivos_relojes/reloj17.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">LuxTime Riviera Marine</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj17.jpg" alt="">
+        <img src="../assets/imagenes/Reloj17.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$9.000</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj12.html" target="content">
+            <img src="../assets/imagenes/Reloj12.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj13.html" target="content">
+            <img src="../assets/imagenes/Reloj13.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj14.html" target="content">
+            <img src="../assets/imagenes/Reloj14.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj15.html" target="content">
+            <img src="../assets/imagenes/Reloj15.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
