--- a/archivos_relojes/reloj18.html
+++ b/archivos_relojes/reloj18.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">LuxTime Eclipse Shadow</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj18.jpg" alt="">
+        <img src="../assets/imagenes/Reloj18.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$15.700</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj1.html" target="content">
+            <img src="../assets/imagenes/Reloj1.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj13.html" target="content">
+            <img src="../assets/imagenes/Reloj13.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj6.html" target="content">
+            <img src="../assets/imagenes/Reloj6.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj7.html" target="content">
+            <img src="../assets/imagenes/Reloj7.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
