--- a/archivos_relojes/reloj19.html
+++ b/archivos_relojes/reloj19.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">LuxTime Diamant Blanc</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj19.jpg" alt="">
+        <img src="../assets/imagenes/Reloj19.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$17.800</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj20.html" target="content">
+            <img src="../assets/imagenes/Reloj20.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj5.html" target="content">
+            <img src="../assets/imagenes/Reloj5.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj10.html" target="content">
+            <img src="../assets/imagenes/Reloj10.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj4.html" target="content">
+            <img src="../assets/imagenes/Reloj4.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
