--- a/archivos_relojes/reloj2.html
+++ b/archivos_relojes/reloj2.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">Jacob&Co. The Billionaire</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj2.jpg" alt="">
+        <img src="../assets/imagenes/Reloj2.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$45.000</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj18.html" target="content">
+            <img src="../assets/imagenes/Reloj18.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj7.html" target="content">
+            <img src="../assets/imagenes/Reloj7.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj10.html" target="content">
+            <img src="../assets/imagenes/Reloj10.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj4.html" target="content">
+            <img src="../assets/imagenes/Reloj4.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
