--- a/archivos_relojes/reloj5.html
+++ b/archivos_relojes/reloj5.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">Louis Moinet Meteoris Collection</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj5.jpg" alt="">
+        <img src="../assets/imagenes/Reloj5.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$50.000</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj4.html" target="content">
+            <img src="../assets/imagenes/Reloj4.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj19.html" target="content">
+            <img src="../assets/imagenes/Reloj19.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj13.html" target="content">
+            <img src="../assets/imagenes/Reloj13.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj1.html" target="content">
+            <img src="../assets/imagenes/Reloj1.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
