--- a/archivos_relojes/reloj6.html
+++ b/archivos_relojes/reloj6.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">Patek Philippe 5004T</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj6.jpg" alt="">
+        <img src="../assets/imagenes/Reloj6.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$27.000</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj15.html" target="content">
+            <img src="../assets/imagenes/Reloj15.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj19.html" target="content">
+            <img src="../assets/imagenes/Reloj19.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj7.html" target="content">
+            <img src="../assets/imagenes/Reloj7.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj5.html" target="content">
+            <img src="../assets/imagenes/Reloj5.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
