--- a/archivos_relojes/reloj7.html
+++ b/archivos_relojes/reloj7.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">LuxTime Étoile d’Or</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj7.jpg" alt="">
+        <img src="../assets/imagenes/Reloj7.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$14.500</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj16.html" target="content">
+            <img src="../assets/imagenes/Reloj16.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj1.html" target="content">
+            <img src="../assets/imagenes/Reloj1.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj2.html" target="content">
+            <img src="../assets/imagenes/Reloj2.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj17.html" target="content">
+            <img src="../assets/imagenes/Reloj17.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
