--- a/archivos_relojes/reloj9.html
+++ b/archivos_relojes/reloj9.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">LuxTime Origin 1998</h1>
     <div class="container">
         
-        <img src="../assets/imagenes/Reloj9.jpg" alt="">
+        <img src="../assets/imagenes/Reloj9.jpg" alt="" class="reloj-pr">
         
         <div class="info">
             <h2>$7.800</h2>
@@ -37,6 +37,22 @@
 
             <a href="#">Aplicar Personalizacion</a>
         </div>
+    </div>
+
+    <h2 class="titulo">Productos Relacionados</h2>
+    <div class="relacionados">
+        <a href="reloj6.html" target="content">
+            <img src="../assets/imagenes/Reloj6.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj8.html" target="content">
+            <img src="../assets/imagenes/Reloj8.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj1.html" target="content">
+            <img src="../assets/imagenes/Reloj1.jpg" alt="" class="rel">
+        </a>
+        <a href="reloj5.html" target="content">
+            <img src="../assets/imagenes/Reloj5.jpg" alt="" class="rel">
+        </a>
     </div>
 </body>
 </html>
