--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <div class="parent">
-
         <header> 
             <div class="info-div">
                 <div class="logo">
@@ -32,6 +30,6 @@
         <div class="div3"> 
             <iframe src="home.html" frameborder="0" name="content"></iframe>
         </div>
-    </div>
+
 </body>
 </html>
