feat: agregue animaciones a cada seccion y puse el logo del header como un boton hacia el home

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header> 
             <div class="info-div">
                 <div class="logo">
-                    <h1>LuxTime</h1>
+                    <a href="home.html" target="content">LuxTime</a>
                 </div>
 
                 <nav class="nav-central">
